[gd_scene load_steps=5 format=3 uid="uid://cspp00lglt0c5"]

[ext_resource type="Script" path="res://scripts/jumpfroot.gd" id="1_0jvuf"]
[ext_resource type="Texture2D" uid="uid://soh42xqu2eua" path="res://assets/items/fruit.png" id="2_8c5tv"]
[ext_resource type="AudioStream" uid="uid://c00xaie4tfdwl" path="res://assets/sounds/sfx_gem.ogg" id="3_7yake"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r175e"]
radius = 6.08276

[node name="JumpFroot" type="Area2D"]
z_index = 5
collision_mask = 2
script = ExtResource("1_0jvuf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8c5tv")
region_enabled = true
region_rect = Rect2(16, 32, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_r175e")

[node name="PopupLabel" type="Label" parent="."]
visible = false
modulate = Color(0.647059, 0.498039, 0, 1)
offset_right = 40.0
offset_bottom = 23.0
text = "+Jump"

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7yake")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
